fixing the footer
dang

--- a/css/style.css
+++ b/css/style.css
@@ -696,4 +696,8 @@ footer .copyright {
     footer .content {
         font-size: .625rem;
     }
+    
+    footer .terms {
+        display: none;
+    }
 }
